apps/istio/variants/default/example-com-certificate.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - quay.example.com
    - quay-mirror.example.com
    - minio.example.com
    - minio-ui.example.com
    - clair.example.com
    - ds389.example.com
    - grafana.example.com
    - prometheus.example.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: frontend-gateway
      mode: SIMPLE
  - hosts:
    - quay.example.com
    - quay-mirror.example.com
    - minio.example.com
    - minio-ui.example.com
    - clair.example.com
    - ds389.example.com
    - grafana.example.com
    - prometheus.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
