apps/istio/variants/default/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: istio-system
spec:
  rules:
  - host: kiali.example.com
    http:
      paths:
      - backend:
          service:
            name: kiali
            port:
              number: 20001
        path: /
        pathType: Prefix
